--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,11 @@
-<h1><%= current_user.name %></h1>
-<p><%= image_tag "#{current_user.image}" %></p>
+<h1>
+    <%= image_tag "#{current_user.image}" %>
+    <%= current_user.name %>
+</h1>
+<hr/>
+<h3>User's Khatamat</h3>
+<ul>
+<% @user_khatamat.each do |k| %>
+    <li><%= k.description %></li>
+<% end %>
+</ul>
