--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@
     color: #666666;
  }   
 
- .footer{
-    background-color: #aaaaaa;
- }  
-
+ .listing{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+ }   
