Finishing up UI

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1149,6 +1149,7 @@ $button-tny: rem-calc(4);
 // We use these to control border styles
 // $thumb-border-style: solid;
 // $thumb-border-width: 4px;
+$thumb-border-width: 2px;
 // $thumb-border-color: #fff;
 // $thumb-box-shadow: 0 0 0 1px rgba(#000,.2);
 // $thumb-box-shadow-hover: 0 0 6px 1px rgba($primary-color,0.5);
