--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="small-12 columns">
     <h1>
-        <%= image_tag "#{current_user.image}", class: "th radius" %>
-        <%= current_user.name %>
+        <%= image_tag "#{@user.image}", class: "th radius" %>
+        <%= @user.name %>
     </h1>
   </div>
 </div> 
@@ -22,6 +22,4 @@
     <% end %>
     </ul>
   </div>
-</div> 
-
-
+</div>
