Adding contact us and privacy policy pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
             <a href="/about"><%= t('about_us')%></a>
           </li> 
           <li class="font-droid-kufi muted">
-            <a href="/about"><%= t('contact_us')%></a>
+            <a href="/contact"><%= t('contact_us')%></a>
           </li>
         </ul>
       </div>
