--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -20,7 +20,8 @@
     <p class="font-droid-naskh">
       نرجو ممن يجد هذا التطبيق مفيدا أن يقرأ الفاتحة لوالدتي
     </p>
+    <p class="font-droid-naskh">
+      <a href='/privacy'>يمكنكم زيارة صفحة سياسة الخصوصية هنا</a>
+    </p>
   </div>
 </div>
-
-
