Adding FB meta tags and adding some English translation

--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-12 columns text-right">
     <h3 class="font-droid-kufi">
-      راسلنا
+      <%= t('contact_us') %>
     </h3>
   </div>
 </div> 
