--- a/app/views/khatamat/show.html.erb
+++ b/app/views/khatamat/show.html.erb
@@ -1,3 +1,17 @@
+<% content_for :title do %>
+  <%= @khatma.description %>
+<% end %>
+
+<% content_for :fb_meta_tags do %>
+  <!--Facebook Meta Tags-->
+  <meta property="og:locale" content="ar_EG">
+  <meta property="og:image" content="http://5atma.net/assets/fbbanner.png"/>
+  <meta property="og:url" content="http://5atma.net/k/<%= @khatma.id %>"/>
+  <meta property="og:title" content="<%= @khatma.description %>"/>
+  <meta property="og:site_name" content="<%= t('site_name') %>">
+  <meta property="og:description" content="<%= t('about_us_long') %>">
+<% end %>
+
 <div id="myModal" class="reveal-modal medium" data-reveal>
   <h2 class="font-droid-kufi">تحذير</h2>
   <h3 class="panel"><%= t('you_need_to_sign_in') %></h3>
