--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
       <%= content_for?(:title) ? yield(:title) : t('site_name') %>
     </title>
 
+    <% if content_for?(:fb_meta_tags) %> 
+      <%= yield(:fb_meta_tags) %>
+    <% else %>
+      <!--Facebook Meta Tags-->
+      <meta property="og:locale" content="ar_EG">
+      <meta property="og:image" content="http://5atma.net/assets/fbbanner.png"/>
+      <meta property="og:url" content="<%= current_url %>"/>
+      <meta property="og:title" content="<%= t('site_name') %>"/>
+      <meta property="og:site_name" content="<%= t('site_name') %>">
+      <meta property="og:description" content="<%= t('about_us_long') %>">
+    <% end %>
+
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag    "application" %>
