--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-12 columns text-right">
     <h3 class="font-droid-kufi">
-      عن الموقع
+      <%= t('about_us') %>
     </h3>
   </div>
 </div> 
