Adding Google Analytics JS, and some other past edits

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,9 @@
           </li>
         </ul>
       </div>
-    </div>    
+    </div>  
+
+    <%= render "shared/google_analytics" %>
     
   </body>
 </html>
