fixing Google Analytics code, uid inclusion

--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -7,9 +7,9 @@
     ga('create', 'UA-56995615-1', 'auto');
     ga('require', 'displayfeatures');
     <% if current_user %>
-    ga('set', '&uid', "#{current_user.uid}");
+    ga('set', '&uid', '<%= current_user.uid %>');
     <% else %>
-    ga('set', '&uid', "0");
+    ga('set', '&uid', '0');
     <% end %>
     ga('send', 'pageview');
     </script>  
