adding arabic translation for error message

--- a/app/views/khatamat/new.html.erb
+++ b/app/views/khatamat/new.html.erb
@@ -17,7 +17,7 @@
           </p>
       <% end %>
     <% else %>
-      <p>You need to login first</p>
+      <p><%= t('you_need_to_sign_in') %></p>
     <% end %>
   </div>
 </div> 
