--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -5,12 +5,12 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-56995615-1', 'auto');
-    ga('require', 'displayfeatures');
     <% if current_user %>
-    ga('set', '&uid', '<%= current_user.uid %>');
+    ga('set', 'userId', '<%= current_user.uid %>');
     <% else %>
-    ga('set', '&uid', '0');
+    ga('set', 'userId', '0');
     <% end %>
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
     </script>  
     <!-- End of Google Analytics JS -->
