--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -6,9 +6,9 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-56995615-1', 'auto');
     <% if current_user %>
-    ga('set', 'userId', '<%= current_user.uid %>');
+    //ga('set', 'userId', '<%= current_user.uid %>');
     <% else %>
-    ga('set', 'userId', '0');
+    //ga('set', 'userId', '0');
     <% end %>
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
