--- a/app/views/shared/_google_analytics_uid.html.erb
+++ b/app/views/shared/_google_analytics_uid.html.erb
@@ -1,13 +1,16 @@
 <!-- Google Analytics JS -->
     <script>
-    
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-56995615-1', 'auto');
+    <% if current_user %>
+    ga('set', 'userId', '<%= current_user.uid %>');
+    <% else %>
+    ga('set', 'userId', '0');
+    <% end %>
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
-
     </script>  
     <!-- End of Google Analytics JS -->
