--- a/app/views/khatamat/show.html.erb
+++ b/app/views/khatamat/show.html.erb
@@ -119,7 +119,7 @@
 </div> 
 <% end %>
 
-<script src="/assets/build_share_buttons.js"></script>
+<!--script src="/assets/build_share_buttons.js"></script-->
 <script>
   $(function(){
     build_share_buttons();
