newline after footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,6 +102,12 @@
       </div>
     </div>  
 
+    <div class="row">
+      <div class="small-12 columns">
+        <br/>
+      </div>
+    </div> 
+
     <%= render "shared/google_analytics" %>
     
   </body>
