--- a/app/views/welcome/privacy.html.erb
+++ b/app/views/welcome/privacy.html.erb
@@ -16,6 +16,7 @@
   <div class="small-12 columns text-right">
     <ul>
       <li class="font-droid-kufi">نحتفظ بالقدر الأدني من المعلومات عنك لتسهيل دخولك للموقع</li>
+      <li class="font-droid-kufi">نجمع معلومات قليلة عن كيفية إستخدام كل مستخدم للموقع من أجل تحسين الخدمة</li>
       <li class="font-droid-kufi">لن نقوم بإرسال سخام لبريدك الإلكتروني</li>
       <li class="font-droid-kufi">لن نقوم بإرسال أي شي على حسابك على الفيسبوك نيابة عنك</li>
     </ul>
