--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -6,7 +6,12 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-56995615-1', 'auto');
+    ga('create', 'UA-56995615-1', '5atma.net');
+    <% if current_user %>
+    ga('set', 'userId', '<%= current_user.uid %>');
+    <% else %>
+    ga('set', 'userId', '0');
+    <% end %>
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
 
