--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -8,9 +8,9 @@
 
     ga('create', 'UA-56995615-1', '5atma.net');
     <% if current_user %>
-    ga('set', 'userId', '<%= current_user.uid %>');
+    ga('set', '&uid', '<%= current_user.uid %>');
     <% else %>
-    ga('set', 'userId', '0');
+    ga('set', '&uid', '0');
     <% end %>
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
